--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-20 15:33+0800\n"
-"PO-Revision-Date: 2010-01-29 06:30+0800\n"
-"Last-Translator: Hong Jen Yee (PCMan) <pcman.tw@gmail.com>\n"
+"POT-Creation-Date: 2010-02-20 15:41+0800\n"
+"PO-Revision-Date: 2010-02-20 15:43+0800\n"
+"Last-Translator: 洪任諭 <pcman.tw@gmail.com>\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,9 +22,8 @@ msgid "<b>Command line to execute:</b>"
 msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:2
-#, fuzzy
 msgid "<b>File Type To be Opened:</b>"
-msgstr "<b>檔案類型：</b>"
+msgstr "<b>要開啟的檔案類型：</b>"
 
 #: ../data/ui/app-chooser.glade.h:4
 #, no-c-format
@@ -37,9 +36,8 @@ msgid ""
 msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:9
-#, fuzzy
 msgid "Choose An Application"
-msgstr "其他應用程式"
+msgstr "選擇應用程式"
 
 #: ../data/ui/app-chooser.glade.h:10
 msgid "Custom Command Line"
@@ -50,14 +48,12 @@ msgid "Execute in terminal emulator"
 msgstr ""
 
 #: ../data/ui/app-chooser.glade.h:12
-#, fuzzy
 msgid "Installed Application"
 msgstr "已安裝的應用程式"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "Set selected application as default action of this file type"
-msgstr "選取一應用程式來開啟這類型的檔案"
+msgstr "將選取的應用程式設定為這類型檔案的預設程式"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -95,7 +91,6 @@ msgid "_Skip"
 msgstr "略過(_S)"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "with the following file?"
 msgstr "以下列檔案？"
 
@@ -180,8 +175,7 @@ msgid "Operations that the owner of the file can do"
 msgstr ""
 
 #: ../data/ui/file-prop.glade.h:21
-msgid ""
-"Operations that users of the same group with the owner of the file can do"
+msgid "Operations that users of the same group with the owner of the file can do"
 msgstr ""
 
 #: ../data/ui/file-prop.glade.h:22
@@ -227,32 +221,8 @@ msgstr "<b>到：</b>"
 msgid "Preparing..."
 msgstr "準備中..."
 
-#: ../src/base/fm-file-info.c:52
-msgid "Shortcuts"
-msgstr "捷徑"
-
-#: ../src/base/fm-file-info.c:55
-msgid "Mount Point"
-msgstr "掛載點"
-
-#: ../src/base/fm-path.c:388
-msgid "Trash Can"
-msgstr "垃圾桶"
-
-#: ../src/base/fm-path.c:390
-msgid "My Computer"
-msgstr "我的電腦"
-
-#: ../src/base/fm-path.c:392 ../src/gtk/fm-places-view.c:463
-msgid "Applications"
-msgstr "應用程式"
-
-#: ../src/base/fm-path.c:394
-#, fuzzy
-msgid "Network"
-msgstr "網路磁碟機"
-
-#: ../src/base/fm-utils.c:53 ../src/base/fm-utils.c:82
+#: ../src/base/fm-utils.c:53
+#: ../src/base/fm-utils.c:82
 #, fuzzy, c-format
 msgid "%u byte"
 msgid_plural "%u bytes"
@@ -291,190 +261,118 @@ msgstr "GiB"
 msgid "TiB"
 msgstr "TiB"
 
-#: ../src/gtk/exo/exo-icon-view.c:679
-msgid "Column Spacing"
+#: ../src/base/fm-file-info.c:52
+msgid "Shortcuts"
+msgstr "捷徑"
+
+#: ../src/base/fm-file-info.c:55
+msgid "Mount Point"
+msgstr "掛載點"
+
+#: ../src/base/fm-path.c:388
+msgid "Trash Can"
+msgstr "垃圾桶"
+
+#: ../src/base/fm-path.c:390
+msgid "My Computer"
+msgstr "我的電腦"
+
+#: ../src/base/fm-path.c:392
+#: ../src/gtk/fm-places-view.c:463
+msgid "Applications"
+msgstr "應用程式"
+
+#: ../src/base/fm-path.c:394
+msgid "Network"
+msgstr "網路"
+
+#: ../src/gtk/fm-progress-dlg.c:226
+msgid "Moving files"
+msgstr "正在移動檔案"
+
+#: ../src/gtk/fm-progress-dlg.c:229
+msgid "Copying files"
+msgstr "正在複製檔案"
+
+#: ../src/gtk/fm-progress-dlg.c:232
+msgid "Trashing files"
+msgstr "正將檔案移到垃圾桶"
+
+#: ../src/gtk/fm-progress-dlg.c:235
+msgid "Deleting files"
+msgstr "正在刪除檔案"
+
+#: ../src/gtk/fm-progress-dlg.c:238
+msgid "Creating symlinks"
+msgstr "建立符號連結"
+
+#: ../src/gtk/fm-progress-dlg.c:241
+msgid "Changing file attributes"
+msgstr "變更檔案屬性"
+
+#: ../src/gtk/fm-file-properties.c:177
+msgid "Please enter a valid user name or numeric id."
 msgstr ""
 
-#: ../src/gtk/exo/exo-icon-view.c:680
-msgid "Space which is inserted between grid column"
+#: ../src/gtk/fm-file-properties.c:209
+msgid "Please enter a valid group name or numeric id."
 msgstr ""
 
-#: ../src/gtk/exo/exo-icon-view.c:696
-msgid "Number of columns"
+#: ../src/gtk/fm-file-properties.c:357
+msgid "Do you want to recursively apply these changes to all files and sub-folders?"
+msgstr "你是否要將變更套用到目錄下所有檔案和子目錄？"
+
+#: ../src/gtk/fm-file-properties.c:624
+msgid "Files of different types"
+msgstr "多種不同類型的檔案"
+
+#: ../src/gtk/fm-file-properties.c:645
+msgid "Multiple Files"
+msgstr "多個檔案"
+
+#: ../src/gtk/fm-file-properties.c:764
+msgid "Customize"
 msgstr ""
 
-#: ../src/gtk/exo/exo-icon-view.c:697
-msgid "Number of columns to display"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:128
+msgid "Mount Volume"
+msgstr "掛載裝置(_M)"
 
-#: ../src/gtk/exo/exo-icon-view.c:711
-msgid "Enable Search"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:129
+msgid "Unmount Volume"
+msgstr "卸載裝置(_U)"
 
-#: ../src/gtk/exo/exo-icon-view.c:712
-msgid "View allows user to search through columns interactively"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:130
+msgid "Eject Removable Media"
+msgstr "退出可移除媒體"
 
-#: ../src/gtk/exo/exo-icon-view.c:729
-msgid "Width for each item"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:143
+#: ../src/gtk/fm-places-view.c:746
+msgid "Rename Bookmark Item"
+msgstr "重新命名書籤項目"
 
-#: ../src/gtk/exo/exo-icon-view.c:730
-msgid "The width used for each item"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:144
+msgid "Remove from Bookmark"
+msgstr "從書籤刪除"
 
-#: ../src/gtk/exo/exo-icon-view.c:748
-msgid "Layout mode"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:156
+msgid "Empty Trash"
+msgstr "清空垃圾統"
 
-#: ../src/gtk/exo/exo-icon-view.c:749
-msgid "The layout mode"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:404
+msgid "Trash"
+msgstr "垃圾桶"
 
-#: ../src/gtk/exo/exo-icon-view.c:765
-msgid "Margin"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:451
+msgid "Desktop"
+msgstr "桌面"
 
-#: ../src/gtk/exo/exo-icon-view.c:766
-msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+#: ../src/gtk/fm-places-view.c:747
+msgid "Enter a new name:"
+msgstr "輸入新名稱："
 
-#: ../src/gtk/exo/exo-icon-view.c:782
-msgid "Markup column"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:783
-msgid "Model column used to retrieve the text if using Pango markup"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:797
-#, fuzzy
-msgid "Icon View Model"
-msgstr "圖示檢視"
-
-#: ../src/gtk/exo/exo-icon-view.c:798
-msgid "The model for the icon view"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:811
-msgid "Orientation"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:812
-msgid ""
-"How the text and icon of each item are positioned relative to each other"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:828
-msgid "Pixbuf column"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:829
-msgid "Model column used to retrieve the icon pixbuf from"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:844
-msgid "Reorderable"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:845
-msgid "View is reorderable"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:860
-msgid "Row Spacing"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:861
-msgid "Space which is inserted between grid rows"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:875
-msgid "Search Column"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:876
-msgid "Model column to search through when searching through item"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:890
-#, fuzzy
-msgid "Selection mode"
-msgstr "反相選取"
-
-#: ../src/gtk/exo/exo-icon-view.c:891
-#, fuzzy
-msgid "The selection mode"
-msgstr "選擇一個資料夾"
-
-#: ../src/gtk/exo/exo-icon-view.c:906 ../src/gtk/exo/exo-tree-view.c:201
-msgid "Single Click"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:907 ../src/gtk/exo/exo-tree-view.c:202
-msgid "Whether the items in the view can be activated with single clicks"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:923 ../src/gtk/exo/exo-tree-view.c:218
-msgid "Single Click Timeout"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:924 ../src/gtk/exo/exo-tree-view.c:219
-msgid ""
-"The amount of time after which the item under the mouse cursor will be "
-"selected automatically in single click mode"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:939
-msgid "Spacing"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:940
-msgid "Space which is inserted between cells of an item"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:955
-msgid "Text column"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:956
-msgid "Model column used to retrieve the text from"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:963
-msgid "Selection Box Color"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:964
-msgid "Color of the selection box"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:970
-msgid "Selection Box Alpha"
-msgstr ""
-
-#: ../src/gtk/exo/exo-icon-view.c:971
-msgid "Opacity of the selection box"
-msgstr ""
-
-#: ../src/gtk/fm-app-chooser-dlg.c:95
-#, fuzzy
-msgid "Use selected application to open files"
-msgstr "選取一應用程式來開啟這類型的檔案"
-
-#: ../src/gtk/fm-app-chooser-dlg.c:102
-msgid "Execute custom command line to open files"
-msgstr ""
-
-#: ../src/gtk/fm-app-menu-view.c:150
-msgid "Installed Applications"
-msgstr "已安裝的應用程式"
-
-#: ../src/gtk/fm-dnd-dest.c:431
-msgid "XDirectSave failed."
-msgstr "XDirectSave 失敗"
-
-#: ../src/gtk/fm-file-menu.c:76 ../src/gtk/fm-file-menu.c:77
+#: ../src/gtk/fm-file-menu.c:76
+#: ../src/gtk/fm-file-menu.c:77
 msgid "Open With..."
 msgstr ""
 
@@ -490,29 +388,16 @@ msgstr "建立符號連結"
 msgid "Send To"
 msgstr "傳送到"
 
-#: ../src/gtk/fm-file-properties.c:177
-msgid "Please enter a valid user name or numeric id."
-msgstr ""
+#: ../src/gtk/fm-dnd-dest.c:431
+msgid "XDirectSave failed."
+msgstr "XDirectSave 失敗"
 
-#: ../src/gtk/fm-file-properties.c:209
-msgid "Please enter a valid group name or numeric id."
-msgstr ""
+#: ../src/gtk/fm-app-chooser-dlg.c:95
+msgid "Use selected application to open files"
+msgstr "以選取的應用程式來開啟檔案"
 
-#: ../src/gtk/fm-file-properties.c:357
-msgid ""
-"Do you want to recursively apply these changes to all files and sub-folders?"
-msgstr "你是否要將變更套用到目錄下所有檔案和子目錄？"
-
-#: ../src/gtk/fm-file-properties.c:624
-msgid "Files of different types"
-msgstr "多種不同類型的檔案"
-
-#: ../src/gtk/fm-file-properties.c:645
-msgid "Multiple Files"
-msgstr "多個檔案"
-
-#: ../src/gtk/fm-file-properties.c:764
-msgid "Customize"
+#: ../src/gtk/fm-app-chooser-dlg.c:102
+msgid "Execute custom command line to open files"
 msgstr ""
 
 #: ../src/gtk/fm-folder-view.c:461
@@ -530,6 +415,10 @@ msgstr "大小"
 #: ../src/gtk/fm-folder-view.c:492
 msgid "Modified"
 msgstr "修改"
+
+#: ../src/gtk/fm-app-menu-view.c:150
+msgid "Installed Applications"
+msgstr "已安裝的應用程式"
 
 #: ../src/gtk/fm-gtk-utils.c:44
 msgid "Error"
@@ -559,145 +448,72 @@ msgstr "請輸入新名稱："
 msgid "Are you sure you want to empty the trash bin?"
 msgstr "是否確定要清空垃圾桶？"
 
-#: ../src/gtk/fm-places-view.c:128
-msgid "Mount Volume"
-msgstr "掛載裝置(_M)"
-
-#: ../src/gtk/fm-places-view.c:129
-msgid "Unmount Volume"
-msgstr "卸載裝置(_U)"
-
-#: ../src/gtk/fm-places-view.c:130
-msgid "Eject Removable Media"
-msgstr "退出可移除媒體"
-
-#: ../src/gtk/fm-places-view.c:143 ../src/gtk/fm-places-view.c:746
-msgid "Rename Bookmark Item"
-msgstr "重新命名書籤項目"
-
-#: ../src/gtk/fm-places-view.c:144
-msgid "Remove from Bookmark"
-msgstr "從書籤刪除"
-
-#: ../src/gtk/fm-places-view.c:156
-msgid "Empty Trash"
-msgstr "清空垃圾統"
-
-#: ../src/gtk/fm-places-view.c:404
-msgid "Trash"
-msgstr "垃圾桶"
-
-#: ../src/gtk/fm-places-view.c:451
-msgid "Desktop"
-msgstr "桌面"
-
-#: ../src/gtk/fm-places-view.c:747
-msgid "Enter a new name:"
-msgstr "輸入新名稱："
-
-#: ../src/gtk/fm-progress-dlg.c:226
-msgid "Moving files"
-msgstr "正在移動檔案"
-
-#: ../src/gtk/fm-progress-dlg.c:229
-msgid "Copying files"
-msgstr "正在複製檔案"
-
-#: ../src/gtk/fm-progress-dlg.c:232
-msgid "Trashing files"
-msgstr "正將檔案移到垃圾桶"
-
-#: ../src/gtk/fm-progress-dlg.c:235
-msgid "Deleting files"
-msgstr "正在刪除檔案"
-
-#: ../src/gtk/fm-progress-dlg.c:238
-msgid "Creating symlinks"
-msgstr "建立符號連結"
-
-#: ../src/gtk/fm-progress-dlg.c:241
-msgid "Changing file attributes"
-msgstr "變更檔案屬性"
-
 #: ../src/job/fm-dir-list-job.c:267
 #, c-format
 msgid "It's not a valid directory"
 msgstr "這不是一個有效的目錄。"
 
+#, fuzzy
+#~ msgid "Icon View Model"
+#~ msgstr "圖示檢視"
+
+#, fuzzy
+#~ msgid "Selection mode"
+#~ msgstr "反相選取"
+
+#, fuzzy
+#~ msgid "The selection mode"
+#~ msgstr "選擇一個資料夾"
 #~ msgid "_File"
 #~ msgstr "檔案(_F)"
-
 #~ msgid "_New Window"
 #~ msgstr "開新視窗"
-
 #~ msgid "_Close Window"
 #~ msgstr "關閉視窗(_C)"
-
 #~ msgid "_Edit"
 #~ msgstr "編輯(_E)"
-
 #~ msgid "Move To..."
 #~ msgstr "移動到..."
-
 #~ msgid "Copy To..."
 #~ msgstr "複製到..."
-
 #~ msgid "_View"
 #~ msgstr "檢視(_V)"
-
 #~ msgid "_Sort Files"
 #~ msgstr "排序檔案(_S)"
-
 #~ msgid "_Help"
 #~ msgstr "說明(_H)"
-
 #~ msgid "_Go"
 #~ msgstr "到(_G)"
-
 #~ msgid "Previous Folder"
 #~ msgstr "上一個資料夾"
-
 #~ msgid "Next Folder"
 #~ msgstr "下一個資料夾"
-
 #~ msgid "Parent Folder"
 #~ msgstr "上一層資料夾"
-
 #~ msgid "Go to parent Folder"
 #~ msgstr "到上一層資料夾"
-
 #~ msgid "Home Folder"
 #~ msgstr "家目錄"
-
 #~ msgid "Desktop Folder"
 #~ msgstr "桌面資料夾"
-
 #~ msgid "_Bookmarks"
 #~ msgstr "書籤(_B)"
-
 #~ msgid "Add To Bookmarks"
 #~ msgstr "新增到書籤"
-
 #~ msgid "Folder"
 #~ msgstr "資料夾"
-
 #~ msgid "Blank FIle"
 #~ msgstr "空白檔案"
-
 #~ msgid "Show _Hidden"
 #~ msgstr "顯示隱藏檔案(_H)"
-
 #~ msgid "_Compact View"
 #~ msgstr "簡潔清單檢視(_C)"
-
 #~ msgid "Detailed _List View"
 #~ msgstr "詳細清單檢視(_L)"
-
 #~ msgid "By _Name"
 #~ msgstr "依名稱(&N)"
-
 #~ msgid "By _Modification Time"
 #~ msgstr "依修改時間(_M)"
-
 #~ msgid "Open in New Window"
 #~ msgstr "在新視窗中開啟"
+
