Update po files and TODO.

--- a/TODO
+++ b/TODO
@@ -28,6 +28,7 @@
      Thunar can directly load embedded thumbnail in jpeg files, we need that, too.
      Limit the max size of file for which thumbnail should be generated.
      Don't generate thumbnail for remote file systems?
+     Size of cell renderers and ExoIconView item size must be adjusted for Thumbnail View.
 
 * Mount volumes and mount points when needed
      This already works with remote URLs.
