* Drop applications:/// and replace it with more flexible menu://applications.menu/. * Replace fm_path_is*() APIs with macros. * Update TODO.

--- a/TODO
+++ b/TODO
@@ -70,6 +70,8 @@
 
 * Bug: clicking on detailed view's column to change sorting didn't update the sort sub menu in main menu.
 
+* Bug file properties dialog failed to show atime.
+
 
 
 [Medium Priority]
